white space fix test

--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@
   transition: 0.3s;
 }
 
+html,
+body {
+  width: 100% !important;
+  height: 100% !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  overflow-x: hidden !important;
+}
+
 a {
   text-decoration: none;
   filter: brightness(80%);
